--- a/Lets get hooked/src/index.css
+++ b/Lets get hooked/src/index.css
@@ -4,7 +4,7 @@
   border: 1px solid black;
 }
 .logo {
-  width: 200px;
+  width: 100px;
 }
 
 .nav-items {
@@ -18,8 +18,8 @@
 }
 
 .nav-items > ul > li {
-  padding: 10px;
-  margin: 10px;
+  margin-left: 10px;
+  margin-right: 10px;
 }
 .res-container{
   display: flex;
@@ -29,7 +29,7 @@
   margin: 5px;
   padding: 5px;
   width: 200px;
-  height: 300px;
+  background-color: azure;
 }
 
 .res-card:hover{
@@ -41,4 +41,9 @@
 }
 .res-logo{
   width: 100%;
+}
+
+.res-card-img{
+  width: 100%;
+  height: 150px;
 }
